--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   color: var(--tg-theme-text-color);
   background: var(--tg-theme-bg-color);
 }
-a {
+a:link {
     color: var(--tg-theme-link-color)
 
 </style>
