--- a/style.css
+++ b/style.css
@@ -17,13 +17,44 @@ body {
 }
 a:link {
     color: var(--tg-theme-link-color);
-header {
+#header {
     backgroud: var(--tg-theme-header-bg-color);
 }
-main {
+#main {
+    width: 100%;
+    padding: 20px;
     backgroud: var(--tg-theme-section-separator-color);
 }
-footer {
+#footer {
     backgroud: var(--tg-theme-section-bg-color)
 }
+h1 {
+    margin-top: 50px;
+    margin-bottom: 10px;
+}
+img {
+    width: 70px;
+    margin: 30px auto;
+}
+p {
+    width: 350px;
+    margin: 0 auto;
+}
+bottom {
+    border: 0;
+    border-radius: 5px;
+    margin-top: 50px;
+    height: 60px;
+    width: 200px;
+    font-size: 20px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 500ms ease;
+    color: var(--tg-theme-button-text-color);
+    backgroud: var(--tg-theme-button-color);
+}
+bottom:hover {
+    backgroud: var(--tg-theme-secondary-bg-color)
+}
+    
 </style>
