--- a/style.css
+++ b/style.css
@@ -33,8 +33,11 @@ h1 {
     margin-bottom: 10px;
 }
 img {
-    width: 70px;
-    margin: 30px auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+
 }
 p {
     width: 350px;
