--- a/style.css
+++ b/style.css
@@ -34,9 +34,11 @@ h1 {
 }
 img {
     display: block;
+    border-radius: 8px;
     margin-left: auto;
     margin-right: auto;
     width: 50%;
+    height: auto;
 
 }
 p {
