--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ main {
     backgroud: var(--tg-theme-section-separator-color);
 }
 footer {
-    backgroud: var(--tg-theme-section-bg-color)
+    backgroud: var(--tg-theme-section-bg-color);
 }
 h1 {
     margin-top: 50px;
