--- a/style.css
+++ b/style.css
@@ -22,9 +22,7 @@ body{
   font-size: var(--normal-font-size);
   transition: .5s;
   min-height: 100vh;
-  background: url("https://www.hdwallpapers.in/download/dark_purple_black_paint_liquid_stains_4k_hd_abstract-HD.jpg");
-    background-position: center;
-    background-size: cover;
+  background: var(--tg-theme-bg-color);
 }
 h1{
   margin: 0;
@@ -46,7 +44,7 @@ a{
   height: 100vh;
   background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(5px);
-  color: var(--white-color);
+  color: var(--tg-theme-text-color);
   padding: 1.5rem 1.5rem 2rem;
   transition: .5s;
   z-index: var(--z-fixed);
@@ -71,7 +69,7 @@ a{
   cursor: pointer;
 }
 .nav__logo{
-  color: var(--white-color);
+  color: var(--tg-theme-text-color);
   font-weight: 600;
 }
 .nav__link{
@@ -80,7 +78,7 @@ a{
   align-items: center;
   column-gap: .75rem;
   padding: .75rem;
-  color: var(--white-color);
+  color: var(--tg-theme-text-color);
   border-radius: .5rem;
   margin-bottom: 1rem;
   transition: .3s;
