--- a/style.css
+++ b/style.css
@@ -22,11 +22,12 @@ body{
   font-size: var(--normal-font-size);
   transition: .5s;
   min-height: 100vh;
+  color: var(--tg-theme-text-color);
   background: var(--tg-theme-bg-color);
 }
 h1{
   margin: 0;
-  color: var(--white-color);
+  color: var(--tg-theme-text-color);
 }
 ul{
   margin: 0;
