--- a/style.css
+++ b/style.css
@@ -106,3 +106,9 @@ a{
 .rotate{
   transform: rotate(180deg);
 }
+img{
+  border-radius: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
