--- a/style.css
+++ b/style.css
@@ -2,10 +2,8 @@
 
 :root{
   --nav-width: 92px;
-  --first-color: #CA26FF;
   --bg-color: #12192C;
   --sub-color: #B6CEFC;
-  --white-color: #FFF;
   --body-font: 'Poppins', sans-serif;
   --normal-font-size: 1rem;
   --small-font-size: .875rem;
@@ -79,14 +77,14 @@ a{
   align-items: center;
   column-gap: .75rem;
   padding: .75rem;
-  color: var(--tg-theme-text-color);
+  color: var(--tg-theme-button-text-color);
   border-radius: .5rem;
   margin-bottom: 1rem;
   transition: .3s;
   cursor: pointer;
 }
 .nav__link:hover{
-  background-color: var(--first-color);
+  background-color: var(--tg-theme-button-color);
 }
 .nav__icon{
   font-size: 1.25rem;
@@ -101,7 +99,7 @@ a{
   padding: 2rem 0 0 16rem;
 }
 .active{
-  background-color: var(--first-color);
+  background-color: var(--tg-theme-button-color);
 }
 .rotate{
   transform: rotate(180deg);
