--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
   --body-font: 'Poppins', sans-serif;
   --normal-font-size: 1rem;
   --small-font-size: .875rem;
-  --z-fixed: 999999;
+  --z-fixed: 100;
 }
 *,::before,::after{
   box-sizing: border-box;
@@ -35,7 +35,7 @@ ul{
 a{
   text-decoration: none;
 }
-.l-navbar{
+.l-navbar {
   position: fixed;
   top: 0;
   left: 0;
@@ -46,7 +46,7 @@ a{
   color: var(--tg-theme-text-color);
   padding: 1.5rem 1.5rem 2rem;
   transition: .5s;
-  z-index: var(--z-fixed);
+  z-index: 1000;
 }
 .nav{
   height: 100%;
@@ -97,7 +97,9 @@ a{
   width: calc(var(--nav-width) + 9.25rem);
 }
 .body-pd{
-  padding: 2rem 0 0 16rem;
+  padding-left: var(--nav-width);
+  position: relative;
+  height: 100vh;
 }
 .active{
   background-color: var(--tg-theme-button-color);
@@ -110,4 +112,14 @@ img{
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+.header, .main-content, .footer {
+  position: relative;
+  z-index: 1; /* Низкий z-index для остальных элементов */
+  padding: 1rem;
+}
+
+.main-content {
+  margin-top: 0; /* Убираем отступ сверху */
+  padding-top: 1rem; /* Добавляем внутренний отступ сверху */
 }
