--- a/style.css
+++ b/style.css
@@ -195,7 +195,8 @@ a{
 }
 .product-photo {
   position: relative;
-  padding-bottom: 150px;
+  padding-top: 50px;
+  padding-bottom: 100px;
   overflow: hidden;
 }
 .product-photo img {
