--- a/style.css
+++ b/style.css
@@ -197,7 +197,7 @@ a{
   position: relative;
   padding-top: 50px;
   padding-bottom: 50px;
-  margin-top: 25px;
+  margin-top: 15%;
   overflow: hidden;
 }
 .product-photo img {
