--- a/style.css
+++ b/style.css
@@ -38,7 +38,8 @@ a{
 
 .product p {
   margin: 0;
-  font-size: 1em;
+  margin-top: 15px;
+  font-size: 0.8em;
   line-height: 1.4em;
   max-height: 5.6em; /* Ограничение максимальной высоты */
   overflow: hidden;
