--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ a{
 
 .product p {
   margin: 0;
-  margin-top: 15px;
+  margin-top: 5%;
   font-size: 0.8em;
   line-height: 1.4em;
   max-height: 5.6em; /* Ограничение максимальной высоты */
